# architect

./: .gitignore  .pre-commit-config.yaml  README.md  gource.conf  log.conf  pyproject.toml
.github/workflows/: UML-Generator.yml  issues-notion-sync.yml  pipeline.yml  pytest.yml
architect/: __init__.py  artifact.py
architect/components/: __init__.py  component.py  diffractors.py  filters.py  foreoptics.py  lenses.py  masks.py  sensors.py  slits.py
architect/libs/: physlib.py  utillib.py
architect/luts/: __init__.py  functions.py  test_lut.csv
architect/luts/atmosphere/: radiance_max.csv  transmittance_max.csv
architect/luts/sensors/: tauswir_quantum_efficiency.csv
architect/pipelines_LEGACY/: grism_eff_LEGACY.py  grism_eff_vs_fringe_density.py  grism_eff_vs_groove_dens.py  grism_eff_vs_incidence.py  grism_eff_vs_lambda.py  pipe_ambient_temp.py  pipe_grism_angle.py  pipe_gsd_swath.py  pipe_mass_volume.py  pipe_snr.py  pipe_thinlens_imageheight.py  pipe_vphgrism_resolution.py
architect/systems/: __init__.py  component.py  payloads.py  satellites.py  spectrometers.py  system.py
architect/systems/optical/: __init__.py  diffractors.py  foreoptics.py  lenses.py  masks.py  optical_component.py  optical_surface.py  sensors.py  spectrometers.py
architect/systems/space/: satellites.py
data/: L_radiance_min.csv  atmos_radiance_max.csv  atmos_radiance_min_config.txt  atmos_transmittance_max.csv  atmos_transmittance_min.csv  filter_transmittance.csv  sensor_tauswir_quantum_efficiency.csv
docs/: README.md
notebooks/: grism_efficency_vs_fringe_frequency.ipynb  pointing_accuracy_vs_spatial_resolution_tradebook.ipynb  report.ipynb  sensor_wavelength_mapping.ipynb  snr.ipynb  spatial_resolution.ipynb  spatial_resolution_&_swath_vs_focal_length_trade.ipynb  spatial_resolution_vs_swath_trade.ipynb  spatialresolution_&_swath_vs_focallength_trade.ipynb  spectral_resolution_&_efficiency_vs_grism_resolvance_.ipynb  spectralresolution_&_efficiency_vs_grismresolvance_.ipynb  tradebook_template.ipynb
payload_designer/: artifact.py  components.py  systems.py
payload_designer/components/: __init__.py  basecomponent.py  component.py  components.py  diffractors.py  filters.py  foreoptics.py  lenses.py  masks.py  sensors.py  slits.py
payload_designer/componentss/: sensors.py  slits.py
payload_designer/data/: config_L_radiance_max.txt  lut_grism_efficiency.csv
payload_designer/libs/: physlib.py  plotlib.py  utillib.py
payload_designer/luts/: functions.py  test_lut.csv
payload_designer/luts/atmosphere/: radiance_min.csv  transmittance_min.csv
payload_designer/pipelines/: grism_eff.py  grism_eff_LEGACY.py  grism_eff_vs_fringe_density.py  grism_eff_vs_groove_dens.py  grism_eff_vs_incidence.py  grism_eff_vs_lambda.py  pipe_ambient_temp.py  pipe_grism_angle.py  pipe_gsd_swath.py  pipe_mass_volume.py  pipe_slit_fov.py  pipe_snr.py  pipe_thinlens_imageheight.py  pipe_vph_image_height.py  pipe_vphgrism_resolution.py  snr_pipeline.py  transmittance_pipeline.py  vphgrism_image_height.py
payload_designer/pipelines_LEGACY/: grism_eff_vs_fringe_density.py  grism_eff_vs_groove_dens.py  grism_eff_vs_incidence.py  grism_eff_vs_lambda.py  pipe_mass_volume.py  pipe_snr.py
payload_designer/systems/: __init__.py  payloads.py  satellites.py  system.py
tests/: .coverage  test_AchromDoublet.py  test_Artifact.py  test_Foreoptics.py  test_Slit.py  test_Surface_Relief_Grating.py  test_ThickLens.py  test_ThinFocuser.py  test_ThinLens.py  test_VPHGrating.py  test_VPHGrism.py  test_VPH_Grating.py  test_filter.py  test_luts.py  test_utillib.py
tests/test_components/: test_AchromLens.py  test_Component.py  test_Foreoptic.py  test_SRGrating.py  test_Sensor.py  test_Slit.py  test_ThickLens.py  test_ThinLens.py  test_VPHGrating.py  test_VPHGrism.py
tests/test_components/test_diffractors/: test_SRGrating.py  test_TransmissiveDiffractor.py  test_VPHGrating.py  test_VPHGrism.py
tests/test_components/test_filters/: test_Filter.py
tests/test_components/test_foreoptics/: test_Foreoptic.py
tests/test_components/test_lenses/: test_AchromLens.py  test_Lens.py  test_ThickLens.py  test_ThinLens.py
tests/test_components/test_masks/: test_RectSlit.py
tests/test_components/test_sensors/: test_Sensor.py
tests/test_components/test_slits/: test_Slit.py
tests/test_libs/: test_plotlib.py  test_utillib.py
tests/test_luts/: test_LUT.py  test_luts.py
tests/test_systems/: test_Component.py  test_system.py
tests/test_systems/test_optical/: test_OpticalComponent.py  test_OpticalSurface.py
tests/test_systems/test_optical/test_diffractors/: test_TransmissiveDiffractor.py  test_VPHGrating.py  test_VPHGrism.py
tests/test_systems/test_optical/test_foreoptics/: test_Foreoptic.py
tests/test_systems/test_optical/test_lenses/: test_Lens.py
tests/test_systems/test_optical/test_masks/: test_RectSlit.py
tests/test_systems/test_optical/test_sensors/: test_Sensor.py
tests/test_systems/test_optical/test_spectrometers/: test_FINCHEye.py  test_HyperspectralImager.py
tests/test_systems/test_payloads/: test_FINCHEye.py  test_HyperspectralImager.py
tests/test_systems/test_satellites/: test_CubeSat.py  test_FINCH.py  test_Satellite.py
tests/test_systems/test_space/: test_CubeSat.py  test_FINCH.py  test_Satellite.py
tests/test_systems/test_spectrometers/: test_FINCHEye.py  test_HyperspectralImager.py
tradebooks/: grism_efficency_vs_fringe_frequency.ipynb  ground_target_error_tradebook.ipynb  ground_target_error_vs_skew_angle_error.ipynb  pointing_accuracy_vs_spatial_resolution_tradebook.ipynb  report.ipynb  sensor_wavelength_mapping.ipynb  slew_rate_vs_frame_rate.ipynb  slit_width_braden.ipynb  slit_width_trade.ipynb  snr.ipynb  snr_vs_image_diameter.ipynb  spatial_resolution_&_SNR_vs_aperture_size.ipynb  spatial_resolution_&_swath_vs_focal_length_trade.ipynb  spectral_resolution_&_efficiency_vs_grism_resolvance_.ipynb  spectral_resolution_vs_beam_diameter.ipynb  spectral_resolution_vs_slit_width_javail.ipynb  tradebook_template.ipynb
